--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ body{
 <script>
 /* ===== FIREBASE CONFIG ===== */
 firebase.initializeApp({
-  databaseURL:"YOUR_FIREBASE_DATABASE_URL"
+  databaseURL:"https://myscoreboard-b140f-default-rtdb.firebaseio.com/"
 });
 const db = firebase.database().ref("tv_scoreboard");
 
